# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes

2006-04-22 Piotr Ozarowski <ozarow@gmail.com>
	* Backup/restore function rewrited (smaller zipfile)

2006-04-21 Piotr Ozarowski <ozarow@gmail.com>
	* Adding another numeric tag/lang/volume/collection is now not possible

2006-04-20 Piotr Ozarowski <ozarow@gmail.com>
	* ADOdb transition started

2006-04-17 Piotr Ozarowski <ozarow@gmail.com>
	* Version changed to 0.6.1+svn
	* Minor fixes in doc files
	* Added watch file for Debian package

---- 0.6.1 ---

2006-04-14 Piotr Ozarowski <ozarow@gmail.com>
	* Updated some docs (translation README and INSTALL notes)
	* Fixed some typos
	* Polish translation updated

2006-04-11 Piotr Ozarowski <ozarow@gmail.com>
	* Filter function rewrited
	  + new fields added
	  + it should work on Windows now

2006-04-08 Piotr Ozarowski <ozarow@gmail.com>
	* First tag can now be renamed

2006-04-08 Vasco Nunes <vasco.m.nunes@gmail.com>
	* win32 distro is using now gtk2.8 with pygtk2.8. This fixes lots of old pygtk related bugs (mainly major pixbuf ones)

2006-04-07 Vasco Nunes <vasco.m.nunes@gmail.com>
	* some win32 related fixes

2006-04-05 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Some changes to winsetup.py

2006-03-11 Piotr Ozarowski <ozarow@gmail.com>
	* Makefile fixes:
	 + Manpages are now uninstalled as well
	 + Code cleanups
	* Debian files updated

2006-03-06 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Czech translation updated.
	* CSFD - 'Cesko-Slovensk Filmov Databze' movie plugin updated.

2006-03-05 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Spanish translation updated.
	* Allocine movie plugin updated.

---- 0.6 ----

2006-03-05 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Fixed bug when using 'clone movie' function on filtered treeview.
	* When using quick filter, 'all movies' filter on menu should be checked. Fixed.
	* Posters are now saved to the system temp dir and only moved to posters dir when the movie is really commited to db.