@@ -93,7 +93,26 @@
 		      </child>
 		    </widget>
 		  </child>
+		  <child>
+			 <widget class="GtkImageMenuItem" id="merge">
+				<property name="visible">True</property>
+				<property name="label" translatable="yes">Merge</property>
+				<property name="use_underline">True</property>
+				<signal name="activate" handler="on_merge_activate" last_modification_time="Tue, 19 Apr 2005 11:58:23 GMT"/>
 
+				<child internal-child="image">
+			<widget class="GtkImage" id="image377">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-open</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+				</child>
+			 </widget>
+		  </child>
 		  <child>
 		    <widget class="GtkSeparatorMenuItem" id="separatormenuitem1">
 		      <property name="visible">True</property>
